--- a/src/app/agri-bid-home/agri-bid-home-page/agri-bid-home-page.component.html
+++ b/src/app/agri-bid-home/agri-bid-home-page/agri-bid-home-page.component.html
@@ -2,51 +2,78 @@
 
     <!-- Header -->
     <div class="row align-items-center py-3 header-background-color text-center text-md-start">
-        <div class="col-12 col-md-4 text-center home-page-icons-size">AGRI BID
+        <div class="col-12 col-md-3 text-center home-page-icons-size">AGRI BID</div>
+
+        <div class="col-12 col-md-1 mt-3"><i class="fa-solid fa-language fs-5 text-primary" role="button"
+                (click)="onClickLanguageChnage()" [matTooltip]="labelConstants.CHANGE_LANGUAGE"
+                matTooltipPosition="below"></i>
+            <!-- Language Selection Drop down starts -->
+            <div [hidden]="isShowLanguageSelection"
+                class="language-selection-panel position-absolute shadow-sm bg-white rounded border border-success"
+                style="z-index: 1000; max-width: 250px; width: 90vw;">
+                <div class="card-body p-1" id="languageSelectionCard">
+                    <mat-form-field appearance="fill" class="w-100">
+                        <mat-label>Select Language</mat-label>
+                        <mat-select [(ngModel)]="selectedLanguage" (selectionChange)="onLanguageSelection()"
+                            name="languageSelection" required>
+                            <mat-option>
+                                <ngx-mat-select-search [(ngModel)]="searchLanguageValue"
+                                    placeholderLabel="Serach Language" noEntriesFoundLabel="No options found"
+                                    name="languageSearch"></ngx-mat-select-search>
+                            </mat-option>
+                            <mat-option *ngFor="let language of languageOptions | languageFilter : searchLanguageValue"
+                                [value]="language">{{ language }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+            <!-- Language Selection Drop down ends -->
         </div>
 
-        <div class="col-12 col-md-8 d-flex justify-content-between justify-content-md-end mt-3 mt-md-0">
-            <div class="mb-0 fs-4 btn">
-                <a routerLink="/" class="anchor-tag-styling-desable">Home</a>
+        <div class="col-12 col-md-8 d-flex justify-content-between justify-content-md-end p-0">
+            <div class=" mb-0 fs-5 btn fw-bold text-uppercase">
+                <a routerLink="/" class="anchor-tag-styling-desable">{{labelConstants.HOME}}</a>
             </div>
-            <div class="mb-0 fs-4 btn">About</div>
-            <div class="mb-0 fs-4 btn">Contact</div>
-            <div class="mb-0 fs-4 btn" (click)="openUserLoginPage()">Login</div>
+            <div class="mb-0 fs-5 btn fw-bold text-uppercase">{{labelConstants.ABOUT_US}}</div>
+            <div class="mb-0 fs-5 btn fw-bold text-uppercase">{{labelConstants.CONTACT_US}}</div>
+            <div class="mb-0 fs-5 btn fw-bold text-uppercase" (click)="openUserLoginPage()">{{labelConstants.LOG_IN}}
+            </div>
         </div>
     </div>
 
     <!-- Hero Image Section -->
     <div class="home-page-image d-flex flex-column justify-content-center align-items-center text-center px-3 py-5">
         <!-- <h1 class="display-6 mb-4 text-color-1">Empowering Farmers. Fair Prices. Transparent Bidding.</h1> -->
-
         <div class="d-flex flex-wrap justify-content-center gap-3">
-            <button class="btn btn-success px-4 py-2" (click)="openFarmerRegistrationForm()">Register as Farmer</button>
-            <button class="btn btn-light px-4 py-2" (click)="openBuyerRegistrationForm()">Register as Buyer</button>
+            <button class="btn btn-success px-4 py-2 fw-bold"
+                (click)="openFarmerRegistrationForm()">{{labelConstants.REGISTER_AS_FARMER}}</button>
+            <button class="btn btn-light px-4 py-2 fw-bold"
+                (click)="openBuyerRegistrationForm()">{{labelConstants.REGISTER_AS_BUYER}}</button>
         </div>
     </div>
 
 
     <!-- Feature Section -->
     <div class="row text-center py-5">
-        <div class="col-12 mb-4 fs-2">Feature Section
+        <div class="col-12 mb-4 fs-2">{{labelConstants.FEATURES_SECTION}}
         </div>
 
         <div class="col-12 col-md-4 mb-4">
             <i class="bi bi-clock home-page-icons-size d-block mb-2"></i>
-            <strong>Real-time Bidding</strong><br>
-            <small>Participate in live auctions with instant updates.</small>
+            <strong>{{labelConstants.REAL_TIME_BIDDING}}</strong><br>
+            <small>{{labelConstants.REAL_TIME_BIDDING_MSG}}</small>
         </div>
 
         <div class="col-12 col-md-4 mb-4">
             <i class="fa-solid fa-wheat-awn home-page-icons-size d-block mb-2"></i>
-            <strong>Crop Listings</strong><br>
-            <small>Farmers can list their produce with detailed information.</small>
+            <strong>{{labelConstants.CROP_LISTINGS}}</strong><br>
+            <small>{{labelConstants.CROP_LISTINGS_MSG}}</small>
         </div>
 
         <div class="col-12 col-md-4 mb-4">
             <i class="bi bi-shield-check home-page-icons-size d-block mb-2"></i>
-            <strong>Secure Payments</strong><br>
-            <small>Ensuring safe and easy transactions for all users.</small>
+            <strong>{{labelConstants.SECURE_PAYMENT}}</strong><br>
+            <small>{{labelConstants.SECURE_PAYMENT_MSG}}</small>
         </div>
     </div>
 </div>
