--- a/src/app/agri-bid-home/farmer-registration-model/farmer-registration-model.component.html
+++ b/src/app/agri-bid-home/farmer-registration-model/farmer-registration-model.component.html
@@ -3,8 +3,8 @@
         <i class="fa fa-times fs-4 float-end pe-1" (click)="closeRegistrationModel()" role="button"></i>
     </div>
     <div class="row border-bottom">
-        <div class="col-md-12 text-center fs-4 pt-2">
-            Farmer Registration
+        <div class="col-md-12 text-center fs-4 fw-bold pt-2">
+            {{labelConstants.FARMER_REGISTRATION}}
         </div>
         <div class="col-md-12 text-center fs-5 pt-2" [ngClass]="isRegistrationError ? 'text-danger' : 'text-success'">
             {{registrationMsg}}
@@ -19,8 +19,9 @@
                     (change)="onFileSelected($event)" #fileInput>
 
                 <div class="pt-1">
-                    <i class="fa-solid fa-cloud-arrow-up fs-5 text-primary" role="button" matTooltip="Upload Image"
-                        matTooltipPosition="below" (click)="fileInput.click()"></i>
+                    <i class="fa-solid fa-cloud-arrow-up fs-5 text-primary" role="button"
+                        [matTooltip]="labelConstants.UPLOAD_IMAGE" matTooltipPosition="below"
+                        (click)="fileInput.click()"></i>
                 </div>
             </div>
         </div>
@@ -29,52 +30,55 @@
     <form #registrationForm="ngForm" class="p-3">
         <!-- Name -->
         <div class="form-group mb-3">
-            <label>Name</label>
-            <input type="text" class="form-control" name="name" placeholder="Enter your name" [(ngModel)]="farmer.name"
-                required />
+            <label class="fw-bold">{{labelConstants.NAME}}</label><em class="text-danger">*</em>
+            <input type="text" class="form-control" name="name" [placeholder]="labelConstants.ENTER_NAME_MSG"
+                [(ngModel)]="farmer.name" required />
             <div class="text-danger" *ngIf="registrationForm.submitted && !farmer.name">
-                Name is required
+                {{labelConstants.NAME_REQUIRED_MSG}}
             </div>
         </div>
 
         <!-- Mobile Number -->
         <div class="form-group mb-3">
-            <label>Mobile Number</label>
-            <input type="tel" class="form-control" name="mobile" placeholder="Enter your mobile number"
+            <label class="fw-bold">{{labelConstants.MOBILE_NUMBER}}</label><em class="text-danger">*</em>
+            <input type="tel" class="form-control" name="mobile" [placeholder]="labelConstants.ENTER_MOBILE_NUMBER_MSG"
                 [(ngModel)]="farmer.mobileNumber" pattern="^[0-9]{10}$" required #mobileInput="ngModel" />
             <div class="text-danger" *ngIf="registrationForm.submitted && !farmer.mobileNumber">
-                Mobile number is required
+                {{labelConstants.MOBILE_NUMBER_REQUIRED_MSG1}}
             </div>
             <div class="text-danger" *ngIf="farmer.mobileNumber && !mobileInput.valid">
-                Enter a valid 10-digit number
+                {{labelConstants.MOBILE_NUMBER_REQUIRED_MSG2}}
             </div>
         </div>
 
         <!-- Gmail -->
         <div class="form-group mb-3">
-            <label>Gmail</label>
-            <input type="email" class="form-control" name="email" placeholder="Enter your email"
+            <label class="fw-bold">{{labelConstants.EMAIL}}</label><em class="text-danger">*</em>
+            <input type="email" class="form-control" name="email" [placeholder]="labelConstants.ENTER_EMAIL_MSG"
                 [(ngModel)]="farmer.email" required #emailInput="ngModel" />
             <div class="text-danger" *ngIf="registrationForm.submitted && !emailInput.valid">
-                A valid email is required
+                {{labelConstants.EMAIL_NOT_VALID_MSG}}
             </div>
         </div>
 
         <!-- Password -->
         <div class="form-group mb-3">
-            <label>Password</label>
-            <input type="password" class="form-control" name="password" placeholder="Enter password"
-                [(ngModel)]="farmer.password" required minlength="6" />
+            <label class="fw-bold">{{labelConstants.PASSWORD}}</label><em class="text-danger">*</em>
+            <input type="password" class="form-control" name="password"
+                [placeholder]="labelConstants.ENTER_PASSWORD_MSG" [(ngModel)]="farmer.password" required
+                minlength="6" />
             <div class="text-danger" *ngIf="registrationForm.submitted && !farmer.password">
-                Password is required
+                {{labelConstants.PASSWORD_REQUIRED_MSG}}
             </div>
         </div>
 
 
         <button [disabled]="!registrationForm.valid" (click)="resetFarmerRegistration()"
-            class="btn btn-danger float-end mb-2">Reset</button>
+            class="btn btn-danger float-end mb-2"><i
+                class="fa-solid fa-rotate-left text-light"></i>&nbsp;{{labelConstants.RESET}}</button>
         <!-- Submit Button -->
         <button [disabled]="!registrationForm.valid" (click)="onSubmitFarmerRegistration()"
-            class="btn btn-success float-end mb-2 me-2">Register</button>
+            class="btn btn-success float-end mb-2 me-2"><i
+                class="fa-solid fa-floppy-disk text-light"></i>&nbsp;{{labelConstants.REGISTER}}</button>
     </form>
 </div>
