--- a/src/app/agri-bid-home/user-login-page-model/user-login-page-model.component.html
+++ b/src/app/agri-bid-home/user-login-page-model/user-login-page-model.component.html
@@ -3,21 +3,28 @@
     <div class="row text-center justify-content-center pb-2">
         <mat-button-toggle-group class="center-toggle-group login-toggle-button" [(ngModel)]="selectedUserType"
             [hideSingleSelectionIndicator]="true">
-            <mat-button-toggle value="Farmer"><b class="p-5">Farmer</b></mat-button-toggle>
-            <mat-button-toggle value="Buyer"><b class="p-5">Buyer</b></mat-button-toggle>
+            <mat-button-toggle value="Farmer"><b class="p-5">{{labelConstants.FARMER}}</b></mat-button-toggle>
+            <mat-button-toggle value="Buyer"><b class="p-5">{{labelConstants.BUYER}}</b></mat-button-toggle>
         </mat-button-toggle-group>
     </div>
 
     <div class="row">
         <div class="col-md-12 col-sm-12 text-center fs-3 pt-2 pb-4">
-            <b>Welcome, {{selectedUserType}}</b>
+            <b>{{labelConstants.WELCOME}},&nbsp;
+                <span *ngIf="selectedUserType == 'Farmer'">
+                    {{labelConstants.FARMER}}
+                </span>
+                <span *ngIf="selectedUserType == 'Buyer'">
+                    {{labelConstants.BUYER}}
+                </span>
+            </b>
         </div>
         <div class="col-md-12 col-sm-12 text-center fs-4">
             <p *ngIf="selectedUserType === 'Farmer'">
-                Log in to sell your crops and manage your listings
+                {{labelConstants.FARMER_LOGIN_GREET}}
             </p>
             <p *ngIf="selectedUserType === 'Buyer'">
-                Log in to browse crops and make purchases
+                {{labelConstants.BUYER_LOGIN_GREET}}
             </p>
         </div>
     </div>
@@ -26,28 +33,29 @@
 
         <!-- Email or  Phone -->
         <div class="form-group mb-3">
-            <label class="fs-5">Email or Phone</label>
-            <input type="text" class="form-control" name="emailOrPhone" placeholder="Enter your email or phone number"
-                [(ngModel)]="loginDto.userName" #emailOrPhoneInput="ngModel"
+            <label class="fs-5">{{labelConstants.EMAIL_OR_PHONE}}</label>
+            <input type="text" class="form-control" name="emailOrPhone"
+                [placeholder]="labelConstants.EMAIL_OR_PHONE_MSG" [(ngModel)]="loginDto.userName"
+                #emailOrPhoneInput="ngModel"
                 [pattern]="'^((\\+91-?)|0)?[0-9]{10}$|^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}$'" required />
             <div class="text-danger" *ngIf="loginForm.submitted && !emailOrPhoneInput.valid">
-                Please enter a valid email address or mobile number.
+                {{labelConstants.EMAIL_OR_PHONE_VALID_MSG}}
             </div>
         </div>
 
 
         <!-- Password -->
         <div class="form-group mb-3 position-relative">
-            <label class="fs-5">Password</label>
+            <label class="fs-5">{{labelConstants.PASSWORD}}</label>
             <input [type]="showPassword ? 'text' : 'password'" class="form-control" name="password"
-                placeholder="Enter password" [(ngModel)]="loginDto.password" required minlength="6" />
-
+                [placeholder]="labelConstants.ENTER_PASSWORD_MSG" [(ngModel)]="loginDto.password" required
+                minlength="6" />
             <!-- Toggle show password icon  -->
             <i class="fa" [ngClass]="showPassword ? 'fa-eye-slash' : 'fa-eye'" (click)="showPassword = !showPassword"
                 style="position: absolute; right: 10px; top: 38px; cursor: pointer;"></i>
 
             <div class="text-danger" *ngIf="loginForm.submitted && !loginDto.password">
-                Password is required
+                {{labelConstants.PASSWORD_REQUIRED_MSG}}
             </div>
         </div>
 
@@ -57,7 +65,7 @@
 
         <div class="row p-3">
             <button [disabled]="disableLogin || !loginForm.valid" (click)="userLogin()"
-                class="btn btn-success justify-content-center float-end mb-2 me-2"><b>Login</b></button>
+                class="btn btn-success justify-content-center float-end mb-2 me-2"><b>{{labelConstants.LOG_IN}}</b></button>
         </div>
     </form>
 </div>
