--- a/src/app/user-screen/agri-bid-farmer-page/dashboard/dashboard.component.html
+++ b/src/app/user-screen/agri-bid-farmer-page/dashboard/dashboard.component.html
@@ -1,1 +1,60 @@
-<p>dashboard works!</p>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active text-dark" aria-current="page"><i
+                class="fa-solid fa-users-gear"></i>&nbsp;&nbsp;Dashboard</li>
+    </ol>
+</nav>
+<div class="row p-3">
+    <div class="card col-12 col-md-4 col-sm-4 p-0 shadow">
+        <div class="text-center border border-bottom fs-3 p-2">Latest Crop Bids</div>
+        <div class="card-body">
+            <table class="table mb-0" *ngIf="cropsBidsDetails && cropsBidsDetails.length > 0">
+                <thead class="thead-light">
+                    <tr class="table-success">
+                        <th scope="col">#</th>
+                        <th scope="col">Crop</th>
+                        <th scope="col" class="text-center">Buyer</th>
+                        <th scope="col">Bid Amount</th>
+                        <th scope="col" class="text-center">View Bid</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let cropBid of cropsBidsDetails; index as i">
+                        <th scope="row">{{ i + 1 }}</th>
+                        <td>{{ cropBid?.cropDetails?.cropName }}</td>
+                        <td class="text-center"><i class="fa-solid fa-circle-info"
+                                [ngClass]="selectedCropBuyerInfo == i ? 'text-primary' : 'text-dark'"
+                                matTooltip="Buyer Info" matTooltipPosition="below" (click)="showBuyerInfo(i)"
+                                role="button"></i>
+                            <!-- Buyer Details Card Starts -->
+                            <div [hidden]="selectedCropBuyerInfo != i">
+                                <div
+                                    class="position-absolute shadow end-0 bottom-0 bg-white p-2 border border-success rounded">
+                                    <!-- Name -->
+                                    <div class="text-start">
+                                        <strong>Buyer&nbsp;:&nbsp;</strong>&nbsp;{{cropBid.bidDetails.buyerName}}
+                                    </div>
+
+                                    <!-- Phone -->
+                                    <div class="text-start">
+                                        <strong>Phone&nbsp;:&nbsp;</strong>&nbsp;{{cropBid.bidDetails.buyerPhone}}
+                                    </div>
+
+                                    <!-- Email -->
+                                    <div class="text-truncate text-start">
+                                        <strong>Email&nbsp;:&nbsp;</strong>&nbsp;{{cropBid.bidDetails.buyerEmail}}
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Buyer Details Card Ends -->
+                        </td>
+                        <td>{{ cropBid?.bidDetails?.bidAmount }}&nbsp;{{ cropBid?.bidDetails?.currency }}</td>
+                        <td class="text-center"><i class="fa-solid fa-eye fs-6 text-primary"
+                                matTooltip="View bid details" matTooltipPosition="below" role="button"
+                                (click)="goToMyCropBids(cropBid)"></i></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
