--- a/src/app/user-screen/agri-bid-farmer-page/my-crop-bids/my-crop-bids.component.html
+++ b/src/app/user-screen/agri-bid-farmer-page/my-crop-bids/my-crop-bids.component.html
@@ -69,7 +69,7 @@
 
 <div class="row ps-3 pe-2" *ngIf="cropBidsList.length > 0">
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3" *ngFor="let cropBid of cropBidsList; index as i">
-        <mat-card class="w-100 h-100" appearance="outlined" style="min-height: 100%;">
+        <mat-card class="w-100 h-100 shadow" appearance="outlined" style="min-height: 100%;">
             <mat-card-header class="border border-bottom pb-3">
                 <mat-card-title-group>
                     <mat-card-title>{{ cropBid.cropDetails.cropName }}</mat-card-title>
@@ -144,7 +144,8 @@
                             class="fa-regular fa-thumbs-up"></i>&nbsp;Accept</button>
                 </div>
                 <div class="row float-end pt-2 pb-1 me-3">
-                    <button class="btn btn-primary" title="Chat with buyer" (click)="chatWithBuyer(cropBid.bidDetails)"><i
+                    <button class="btn btn-primary" title="Chat with buyer"
+                        (click)="chatWithBuyer(cropBid.bidDetails)"><i
                             class="fa-solid fa-comments"></i>&nbsp;Chat</button>
                 </div>
             </mat-card-content>
