--- a/src/app/user-screen/user-screen.component.html
+++ b/src/app/user-screen/user-screen.component.html
@@ -1,19 +1,52 @@
-<header class="header d-flex justify-content-between align-items-center px-3 py-2">
-    <div class="home-page-icons-size">AGRI BID</div>
-    <button class="btn d-md-none" (click)="toggleSidebar()">
-        <i class="fa fa-bars"></i>
-    </button>
-    <div class="d-flex justify-content-center justify-content-md-end mt-3 mt-md-0">
-        <div class="user-image mb-2 border border-success bg-light" name="user" (click)="toggleUserInfo()"
-            role="button">
-            <img [src]="loggedInUser?.imageUrl ?? '/assets/user.png'" alt="User Profile"
-                class="rounded-circle profile-header-image">
+<header class="header d-flex justify-content-between px-3 py-2">
+    <div class="d-flex justify-content-start align-items-center">
+        <div class="home-page-icons-size">AGRI BID</div>
+        <button class="btn d-md-none" (click)="toggleSidebar()">
+            <i class="fa fa-bars"></i>
+        </button>
+    </div>
+
+    <div class="d-flex justify-content-end align-items-center">
+        <div class="mt-3 mt-md-0 me-3">
+            <!-- Language Selection Drop down starts -->
+            <div [hidden]="isShowLanguageSelection" id="languageSelectionPanel"
+                class="user-info-panel position-absolute end-0 mt-5 me-1 shadow-sm bg-white rounded border border-success"
+                style="z-index: 1000; max-width: 250px; width: 90vw;">
+                <div class="card-body p-1" id="languageSelectionCardBody">
+                    <mat-form-field appearance="fill" class="w-100" id="languageSelectionDropdown">
+                        <mat-label>Select Language</mat-label>
+                        <mat-select [(ngModel)]="selectedLanguage" (selectionChange)="onLanguageSelection()"
+                            name="languageSelection" id="languageSelectionDropdownSelect" required>
+                            <mat-option id="languageSelectionDropdownOption">
+                                <ngx-mat-select-search [(ngModel)]="searchLanguageValue"
+                                    placeholderLabel="Serach Language" noEntriesFoundLabel="No options found"
+                                    name="languageSearch"></ngx-mat-select-search>
+                            </mat-option>
+                            <mat-option *ngFor="let language of languageOptions | languageFilter : searchLanguageValue"
+                                [value]="language">{{ language }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+            </div>
+            <i class="fa-solid fa-language fs-5 text-primary" id="changeLanguage" role="button"
+                (click)="onClickLanguageChnage()" [matTooltip]="labelConstants.CHANGE_LANGUAGE"
+                matTooltipPosition="below"></i>
+            <!-- Language Selection Drop down ends -->
         </div>
-        <div *ngIf="isUserInfOpen" class="user-info-panel position-absolute end-0 mt-5 shadow-sm bg-white rounded"
-            style="z-index: 1000; max-width: 250px; width: 90vw;">
-            <div class="card-body p-3">
-                <button class="btn btn-sm btn-outline-secondary w-100 mb-2">View Profile</button>
-                <a class="btn btn-sm btn-danger w-100" routerLink="/" routerLinkActive="active">Log Out</a>
+
+        <!-- User Info -->
+        <div class="mt-3 mt-md-0">
+            <div class="user-image mb-2 border border-success bg-light" id="userImageBlock" name="user"
+                (click)="toggleUserInfo()" role="button">
+                <img [src]="loggedInUser?.imageUrl ?? '/assets/user.png'" alt="User Profile"
+                    class="rounded-circle profile-header-image" id="userImage">
+            </div>
+            <div *ngIf="isUserInfOpen" class="user-info-panel position-absolute end-0 shadow-sm bg-white rounded"
+                style="z-index: 1000; max-width: 250px; width: 90vw;">
+                <div class="card-body p-3" id="userInfoCard">
+                    <button class="btn btn-sm btn-outline-secondary w-100 mb-2">View Profile</button>
+                    <a class="btn btn-sm btn-danger w-100" routerLink="/" routerLinkActive="active">Log Out</a>
+                </div>
             </div>
         </div>
     </div>
